imporved styling for tools wrapper, fixed menu nav click on mobile

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -366,10 +366,14 @@ ul#nav li.current a { color: #F06000; }
   display: flex;
   flex-direction: column;
   margin-bottom: 2em;
+  flex: 1 0 33%;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .tool-wrapper > img {
   margin-bottom: 2em;
+  max-width: 125px;
 }
 
 .tool-wrapper > em {
